解决文件读取权限丢失问题

--- a/ModelSplitApks/src/main/AndroidManifest.xml
+++ b/ModelSplitApks/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
         tools:ignore="ScopedStorage" />
 
-    <application>
+    <application
+        android:requestLegacyExternalStorage="true">
         <service android:name="SplitAPKInstallService"
             android:exported="false" />
     </application>
