--- a/ModelSplitApks/src/main/AndroidManifest.xml
+++ b/ModelSplitApks/src/main/AndroidManifest.xml
@@ -17,10 +17,7 @@
 
     <application
         android:requestLegacyExternalStorage="true"
-        >
-        <service android:name=".service.SplitAPKInstallService"
-            android:exported="false" />
-    </application>
+        ></application>
 
 
 
